# Pigs-In-A-Blanket

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  pib.yml
.github/workflows/: Build.yml
include/: common.h  debug.h  essl.h  hooks.h  patches.h  pib.h  shacccgpatch.h  sysmodepatch.h  taiutils.h
include/EGL/: eglext.h  eglplatform.h
include/GLES2/: gl2ext.h
include/shacccg/: paramquery.h
piglet_stub/: Makefile
samples/cube-egl/: CMakeLists.txt  GLES20_Cube.vpk  README.md  main.c  param.yml
samples/cube-egl-system/: CMakeLists.txt  GLES20_Cube.vpk  GLES20_Cube_System.vpk  README.md  main.c
samples/cube-egl-system-vitasdk/: CMakeLists.txt  GLES20_Cube_System_VitaSDK.vpk  README.md  main.c
samples/cube-egl-vitasdk/: CMakeLists.txt  GLES20_Cube_VitaSDK.vpk  README.md  main.c
samples/cube-glfw/: CMakeLists.txt  GLES20_Cube.vpk  README.md  main.c  param.yml
samples/triangle-touch-glfw/: CMakeLists.txt  GLES20.vpk  README.md  main.c  param.yml
shacc_stub/: Makefile  nids.yml
src/: essl.c  hooks.c  main.c  patches.c  pib.c  sha1.c  shacccgpatch.c  sysmodepatch.c  taiutils.c
